2015-06-30 Martin Grønholdt

* debuc.c (db_dealloc): Added check for empty entry in the alloc list.
* http.h: Upped version.


2015-06-29 Martin Grønholdt

* slighttp/http.h (response_states): Added HTTP_STATE_ERROR.


2015-06-27 Martin Grønholdt

* slighttp/http-fs.c (http_fs_test): Added error status code handling.
* slighttp/http-response.c (http_process_response): Handle error status codes.
*						   (fall_through_status_handler): Handle errors when no one else will.

2015-06-24 Martin Grønholdt

* Removed main state machine files.
* net/wifi_connect.* (check_connection): Renamed wifi_check_connection.
* slighttp/http-response.h (http_process_response): Implemented closing of connection.
* user_main.c (status_check): Printing of status, and reset on loss of connection.

2015-06-23 Martin Grønholdt

* net/wifi_connect.c: Reverted to last version before state machine changes.
*                   : Changes getting up to date.
*		    		: Added check_connection.
*					: Added wifi mode to connected call back.
* net/wifi_connect.h: Added check_connection.
* user_main.c: Removed main state machine code.
*	     : Added connected call back.
*	     : Moved dispatch timer after, wifi connect.
* sm_wifi.c: Removed.
* response_handlers.h: Added file, with HTTP response handlers.


2015-06-22 Martin Grønholdt

* net/tcp.h (tcp_connection): Changed sending to boolean.
* net/tcp.c (tcp_sent_cb): Changed code to support sending being boolean.
*			(tcp_send): Changed code to support sending being boolean.
* slighttp/http.h (http_response): Added send.
*				  (http_response_states): Added HTTP_STATE_ASSEMBLED.
* slighttp/http-fs.c: Changed to use http_send.
*					 (sm_http_fs_context): Renamed to http_fs_context.
* slighttp/http-tcp (tcp_connect_cb): Set status code to 200.
*					(tcp_recv_cb): Set status code to 400 on empty request.
*								 : Start sending response, when done parsing the request.
*					(tcp_sent_cb): Send additional data if not done, else set HTTP_STATE_DONE.